enhance product stock
