# cmd/docs/swagger.yaml
@@ -99,7 +99,7 @@ definitions:
     type: object
   github_com_sankangkin_di-rest-api_internal_models.Product:
     properties:
-      brand:
+      brandName:
         type: string
       buyPrice:
         minimum: 1
@@ -124,10 +124,8 @@ definitions:
         minimum: 1
         type: integer
       uom:
-        minLength: 3
         type: string
       uomId:
-        minimum: 3
         type: integer
       updatedAt:
         type: string
@@ -136,7 +134,6 @@ definitions:
     - productName
     - sellPricelvl1
     - sellPricelvl2
-    - uom
     - uomId
     type: object
   github_com_sankangkin_di-rest-api_internal_models.Purchase:
@@ -383,6 +380,8 @@ definitions:
     type: object
   internal_auth.RefreshResponseDTO:
     properties:
+      accessToken:
+        type: string
       refreshToken:
         type: string
     type: object
@@ -497,7 +496,7 @@ definitions:
     type: object
   internal_domain_product.CreateProductRequstDTO:
     properties:
-      brand:
+      brandName:
         type: string
       buyPrice:
         minimum: 1
@@ -523,8 +522,9 @@ definitions:
         minimum: 1
         type: integer
       uom:
-        minLength: 3
         type: string
+      uomId:
+        type: integer
     required:
     - buyPrice
     - categoryId
@@ -533,14 +533,17 @@ definitions:
     - reorderlvl
     - sellPriceLevel1
     - sellPriceLevel2
-    - uom
+    - uomId
     type: object
   internal_domain_product.UpdateProductRequstDTO:
     properties:
-      brand:
-        description: QtyOnHand       int    `json:"qtyOhHand" validate:"required"`
+      brandName:
+        description: |-
+          ReorderLvl      uint   `json:"reorderlvl" gorm:"default:1" validate:"required,min=1"`
+          QtyOnHand       int    `json:"qtyOhHand" validate:"required"`
         type: string
       buyPrice:
+        description: Uom             string `json:"uom" validate:"required,min=2"`
         minimum: 1
         type: integer
       categoryId:
@@ -550,26 +553,19 @@ definitions:
       productName:
         minLength: 3
         type: string
-      reorderlvl:
+      sellPricelvl1:
         minimum: 1
         type: integer
-      sellPriceLevel1:
-        minimum: 1
+      sellPricelvl2:
         type: integer
-      sellPriceLevel2:
-        minimum: 1
+      uomId:
         type: integer
-      uom:
-        minLength: 2
-        type: string
     required:
     - buyPrice
     - categoryId
     - productName
-    - reorderlvl
-    - sellPriceLevel1
-    - sellPriceLevel2
-    - uom
+    - sellPricelvl1
+    - uomId
     type: object
   internal_domain_purchase.PurchaseInvoiceRequestDTO:
     properties:
