# internal/auth/dto.go
@@ -28,6 +28,7 @@ type SignInResponseDTO struct {
 }
 
 type RefreshResponseDTO struct {
+	AccessToken  string `json:"accessToken"`
 	RefreshToken string `json:"refreshToken"`
 }
 
